cmake_minimum_required(VERSION 3.22)
project(AdventOfCode22)

set(CMAKE_CXX_STANDARD 14)

add_executable(AdventOfCode22 main.cpp AoCDay1.cpp AoCDay1.h AoCDay2.cpp AoCDay2.h AoCDay3.cpp AoCDay3.h AoCDay4.cpp AoCDay4.h AoCDay5.cpp AoCDay5.h AoCDay6.cpp AoCDay6.h AoCDay7.cpp AoCDay7.h AoCDay8.cpp AoCDay8.h AoCDay9.cpp AoCDay9.h AoCDay10.cpp AoCDay10.h)
